          Important Note: all users must use port 587 for sending email, port
          25 doesn't accept submitted mail by authenticated users anymore.
        - New SQL table `amavisd.outbound_wblist`, used to store whitelists
          and blacklists for outbound messages. It's required by iRedAPD
          plugin 'amavisd_wblist'.

    * Fixed issues:
        - Incorrectly set default fireewall zone on RHEL/CentOS 7 if you
          didn't choose to restart firewall immediately.
        - 'daemonze =' is required by RHEL/CentOS v6, but not v7.
        - Incorrect Dovecot Master User account used by SOGo.
        - Dovecot Master User doesn't work with LDAP backend.
        - Incorrect quota warning priorities in Dovecot.
          Thanks Peter <rs _at_ samplezone.ch> for the feedback.
        - Incorrect Amavisd setting to sign DKIM on inbound messages.
        - [RHEL/CentOS] Cannot start uwsgi service with 'daemonize' setting in
          /etc/uwsgi.ini.
        - Not preserve the case of ${extension} while delivering message to
          mailbox.

    * Updated packages:
        + Roundcube webmail -> 1.1.3.
        + uwsgi -> 2.0.11.2 (OpenBSD only)
        + FreeBSD:
            - php-5.6

iRedMail-0.9.2:
    * SOGo now works on Debian 8.
    * Improvements:
        - LMTP (port 24) and managesieve (port 4190) services are now listening
          on only localhost (127.0.0,1 and ::1) by default.
        - Improve Fail2ban filter `postfix.iredmail.conf` to prevent DoS
          attack to SMTP service.

    * Fixed issues:
        - Cannot create required SQL tables in `vmail` database with PostgreSQL
          backend.
        - catch-all support doesn't work with user+extension@domain.com.
          Thanks to stevekez <iredmail@stevekerrison.com> for the contribution
          in iRedMail support forum.
        - uwsgi service doesn't work on RHEL/CentOS. A new version of uwsgi
          package was submitted to EPEL repo with higher priority (not