@@ -1,3 +1,3 @@
 2f7a369703e837122def6dd86e703ec0  misc/iRedAdmin-0.4.3.tar.bz2
-86e366d24b1961b833fd9541c180e520  misc/iRedAPD-1.7.0.tar.bz2
+e3aae7e9e128c316f398336386e79fbd  misc/iRedAPD-1.7.0.tar.bz2
 b607296dd6ddfb35f00c2ce3d7a08b6d  misc/roundcubemail-1.1.3-complete.tar.gz
