@@ -25,6 +25,7 @@ iRedMail-0.9.3:
           plugin 'amavisd_wblist'.
 
     * Fixed issues:
+        - Not use correct postrotate command to rotate log file on Debian.
         - Incorrectly set default fireewall zone on RHEL/CentOS 7 if you
           didn't choose to restart firewall immediately.
         - 'daemonze =' is required by RHEL/CentOS v6, but not v7.
